// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 fYMFPs"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 kRkxxs"
  />
</div>
`;

exports[`EmptyState w/ actions 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 fYMFPs"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 kRkxxs"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 gAcuUG"
    >
      <div
        class="EmptyStatestyles__Actions-sc-9kuou6-3 iOtENm"
      >
        EmptyState actions
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ description 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 fYMFPs"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 kRkxxs"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 gAcuUG"
    >
      <div
        class="EmptyStatestyles__Description-sc-9kuou6-2 fbplxg"
      >
        EmptyState description
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ loading: loading-false 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 fYMFPs"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 kRkxxs"
  />
</div>
`;

exports[`EmptyState w/ loading: loading-true 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 fYMFPs"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 kRkxxs"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 gAcuUG"
    >
      <div
        class="Spinnerstyles__Box-moemrn-0 jPiLVW"
      >
        <svg
          class="Spinnerstyles__Svg-moemrn-1 cPXsgS"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            class="Spinnerstyles__Circle-moemrn-2 cElquL"
            color="primary"
            cx="50"
            cy="50"
            r="44"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ some child 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 fYMFPs"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 kRkxxs"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 gAcuUG"
    >
      <div>
        Some child
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ some props 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 fYMFPs className"
  id="EmptyState"
  title="this is EmptyState"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 kRkxxs"
  />
</div>
`;

exports[`EmptyState w/ title 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 fYMFPs"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 kRkxxs"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 gAcuUG"
    >
      <div
        class="EmptyStatestyles__Title-sc-9kuou6-1 dBDBIE"
      >
        EmptyState title
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState w/ title, descriptions, actions 1`] = `
<div
  class="EmptyStatestyles__Box-sc-9kuou6-0 fYMFPs"
>
  <div
    class="EmptyStatestyles__Content-sc-9kuou6-5 kRkxxs"
  >
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 gAcuUG"
    >
      <div
        class="EmptyStatestyles__Title-sc-9kuou6-1 dBDBIE"
      >
        EmptyState title
      </div>
    </div>
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 gAcuUG"
    >
      <div
        class="EmptyStatestyles__Description-sc-9kuou6-2 fbplxg"
      >
        EmptyState description
      </div>
    </div>
    <div
      class="EmptyStatestyles__Row-sc-9kuou6-4 gAcuUG"
    >
      <div
        class="EmptyStatestyles__Actions-sc-9kuou6-3 iOtENm"
      >
        EmptyState actions
      </div>
    </div>
  </div>
</div>
`;
